tests/ui/once_name_reserved_raw_prefix.stderr
error: cache names beginning with `__cached` are reserved for macro-generated bindings and cannot be used as a `name` value
 --> tests/ui/once_name_reserved_raw_prefix.rs:7:4
  |
7 | fn f() -> i32 {
  |    ^
